[package]
name = "cb0r"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cb0r-sys = { version = "0.1.0", path = "../cb0r-sys" }

[dev-dependencies]
hex_literal = "*"
